--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "fastclick": "^1.0.6",
     "vue": "^2.3.3",
     "vue-material": "^0.7.1",
     "vue-router": "^2.3.1"
